--- a/edit_profile.html
+++ b/edit_profile.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="bg_img-s">
+<body class="bg_img-s font_family_roboto-s">
     <!-- .................Home Page Start ......................... -->
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
@@ -50,7 +50,7 @@
 
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white br_47px-s mh_86vh-s">
-            <div class="row pt-5 px-xl-5 justify-content-center">
+            <div class="row pt-5 px-xl-4 justify-content-center">
                 <div class="col-12 text-center">
                     <img src="assets/images/edit_profile.svg" class="position-absolute edit_profile-s" alt="edit profile icon">
                     <div>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <form action="" class="">
-                <div class="row pt-2 pb-5 px-xl-5 px-3">
+                <div class="row pt-2 pb-5 px-xl-4 px-3">
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
                             <label for="first_name-d"><strong><h6>FIRST NAME</h6></strong></label>
