--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
     <title>Help</title>
 </head>
 
-<body class="bg_img-s">
+<body class="bg_img-s font_family_roboto-s">
     <!-- .................Home Page Start ......................... -->
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
@@ -52,7 +52,7 @@
             <div class="wrapper border br_10px-s d-none py-3" id="wrapper-d">
                 <div class="row px-3 border-bottom">
                     <div class="col-12 chat_header-s fg_green-s mb-3">
-                        <h6 class="mb-0">Wellcome to the chatBot</h6>
+                        <h6 class="mb-0">Welcome to the ChatBot</h6>
                     </div>
                 </div>
                 <div class="container-fluid  w_439px_h_633px-s">
@@ -97,13 +97,11 @@
                         <div class="input-group word-break word-wrap br_10px-s shadow">
                             <textarea type="textarea" name="message" placeholder="Type your message....." class="  form-control py-1 br_left_10px-s textarea_h_w-s ft_size_14px-s border-0 " id="simple-chat-message"></textarea>
                             <div class="input-group-append ">
-                                <a class="border-0 br_right_10px-s py-2 px-1 bg-white  h_50px-s align-self-center" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a>
+                                <a class="border-0 br_right_top_bottom_10px-s py-2 px-1 bg-white  h_50px-s align-self-center" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
             </div>
 
             <div class="row pt-5 px-xl-4">
