--- a/post_modal.html
+++ b/post_modal.html
@@ -123,11 +123,11 @@
                                         <a href="jaavscript:(0)" class=" px-1">
                                         <img src="assets/images/like_black.svg" width="20" alt="like">
                                         </a>
-                                        <a href="jaavscript:(0)" class=" px-1"></a>
+                                        <a href="jaavscript:(0)" class=" px-1">
                                             <img src="assets/images/share_black.svg" width="16" alt="share">
                                         </a>
-                                        <a href="jaavscript:(0)" class=" pl-1"></a>
-                                            <img src="assets/images/share_black.svg" width="20" alt="delete">
+                                        <a href="jaavscript:(0)" class=" pl-1">
+                                            <img src="assets/images/delete_icon.svg" width="16" alt="delete">
                                         </a>
                                     </div>
                                 </div>
@@ -141,7 +141,7 @@
                                         <div class="input-group word-break word-wrap border-0">
                                             <textarea type="textarea" name="comment" placeholder="Add your comment....." class="comment-s form-control py-1 textarea_h_w-s ft_size_14px-s border-0 " id="add_comment-d"></textarea>
                                             <div class="input-group-append">
-                                                <a class="border-0 bg-white fg_green-s px-3 post-s" href="javascript:void(0)"><strong>POST</strong></a>
+                                                <a class="border-0 bg-white  px-3 post-s td_none-s" href="javascript:void(0)"><strong class="fg_green-s">POST</strong></a>
                                             </div>
                                         </div>
                                     </div>
