--- a/rating_player.html
+++ b/rating_player.html
@@ -14,16 +14,16 @@
     <title>Rating Player</title>
 </head>
 
-<body class="bg_img-s">
+<body class="bg_img-s font_family_roboto-s">
     <div class="container-fluid px-0 mx-0 ">
         <div class="container-fluid px-xl-5 px-3">
             <div class="row pt-4 pb-3">
-                <div class=" col-md-8 col-12 order-md-1 order-2 d-flex ">
+                <div class=" col-xl-8 col-lg-8 col-md-8 col-12 d-flex order-md-1 order-2 ">
                     <a class="td_none-s" href="game_invitation.html">
-                        <h4 class="pr-2 text-dark">More</h4>
+                        <h4 class="pr-2 text-dark">Game Invitations</h4>
                     </a>
                     <h4 class="px-2"><strong>/</strong></h4>
-                    <h4 class="fg_green-s pl-2">Rating Player</h4>
+                    <h4 class="fg_green-s pl-2">Rate Player</h4>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
                     <div class="">
@@ -46,15 +46,15 @@
                         <img src="assets/images/user_img.png" width="80" class="rounded-circle border_green-s" alt="">
                     </div>
                     <div class="ml-3">
-                        <h3 class="fg_green-s">Jamele</h3>
+                        <h4 class="fg_green-s">Jamele</h4>
                         <div class="d-flex mb-2">
                             <div>
-                                <a href="javascript:void(0)" class="text-dark">@jamelemd</a>
+                                <a href="javascript:void(0)" class="text-dark"><strong>@jamelemd</strong></a>
                             </div>
                             <div class="pl-3">
                                 <a class="pr-2">
-                                    <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="Location" />
-                                    <span> Adailiya </span>
+                                    <img src="assets/images/Location.svg" width="10" class="img-fluid mb-1" alt="Location" />
+                                    <span class="text-dark"> <strong>Adailiya </strong></span>
                                 </a>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             <!--ability rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h6><strong>ABILITY</strong></h6>
+                                    <h6><strong>AGILITY</strong></h6>
                                     <h6 class="ability-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
@@ -231,20 +231,20 @@
                             <h6><strong>Did jamele played this match?</strong></h6>
                         </div>
                         <div class="col-12 mt-3">
-                            <p class="opacity_4-s">You can rate this only if he played this match? After confirming this, you can not revert it.</p>
+                            <p class="opacity_4-s">You can rate this player only if he played this match? After confirming this, you can not revert it.</p>
                         </div>
                         <!--modal text end-->
                     </div>
                     <div class="row px-3 pt-3 pb-5">
                         <!--NO button-->
                         <div class="col-6 pr-2">
-                            <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" id="switch_to_no_rating_modal"><strong>No</strong></button>
+                            <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" id="switch_to_no_rating_modal"><strong>NO</strong></button>
                         </div>
                         <!--NO button end-->
 
                         <!--YES button-->
                         <div class="col-6 pl-2">
-                            <button type="button" class="btn bg_green-s br_10px-s py-3 text-white w-100" data-dismiss="modal"><strong>Yes</strong></button>
+                            <button type="button" class="btn bg_green-s br_10px-s py-3 text-white w-100" data-dismiss="modal"><strong>YES</strong></button>
                         </div>
                         <!--YES button end-->
                     </div>
