--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -14,7 +14,7 @@
     <title>Term & conditions</title>
 </head>
 
-<body class="bg_img-s">
+<body class="bg_img-s font_family_roboto-s">
     <!-- .................Home Page Start ......................... -->
     <!-- <div class="container-fluid px-0 mx-0 "> -->
     <!-- .................Home Page NavBar Start ......................... -->
