--- a/more.html
+++ b/more.html
@@ -17,7 +17,7 @@
     <style></style>
 </head>
 
-<body class="bg_img-s">
+<body class="bg_img-s font_family_roboto-s">
     <!-- .................More Page Start ......................... -->
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
