--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
 
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                            <div class="card home_card br_25px-s card_bg_img-s">
+                            <div class="card home_card br_25px-s">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
                                 </div>
