--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 
         <div class="btn_grp pt-5 d-md-flex justify-content-between pb-0 mx-5 mb_25px-s">
             <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">All positions</button>
-            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">Goal Keeper</button>
+            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">GoalKeeper</button>
             <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">Defender</button>
-            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">Attacker</button>
-            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">Middle Man</button>
+            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">Midfielder</button>
+            <button class="btn btn-lg mb-0 mt-3 mx-1 player_position_button-s w_100_on_sm-s">Forward</button>
         </div>
         <!-- .................Home Page Button Group Section End ......................... -->
         <!-- container for list of players - start -->
