--- a/Home/home-sent-invitation.html
+++ b/Home/home-sent-invitation.html
@@ -335,7 +335,7 @@
                                 <!--add stadium-->
                                 <div class="form-group">
                                     <!--ADD STADIUM-->
-                                    <label for="" class=""><strong>ADD STADIUM</strong></label>
+                                    <label for="" class=""><strong>STADIUM NAME</strong></label>
                                     <input type="text" name="stadium_name" placeholder="Write Stadium Name" class="form-control rounded form-control-xl py-4 ">
                                 </div>
                                 <!--add stadium end-->
