--- a/about_us.html
+++ b/about_us.html
@@ -47,7 +47,7 @@
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white br_47px-s mh_86vh-s">
             <div class="row pt-5 px-xl-4">
-                <div class="col-6">
+                <div class="col-md-6 col-12">
                     <img src="assets/images/black_logo.svg" width="100" class="" alt="Logo">
                     <div class="position-absolute logo_text-s text-white">
                         <h5>
@@ -55,7 +55,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-6 justify-content-end align-self-center d-flex">
+                <div class="col-md-6 col-12 justify-content-end align-self-center d-flex">
                     <div class="px-2">
                         <a href="javascript:void(0)" class=""><img src="assets/images/tweeter.svg" alt="tweeter logo"></a>
                     </div>
