--- a/edit_profile.html
+++ b/edit_profile.html
@@ -94,7 +94,7 @@
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
                             <label for="price-d"><strong><h6>PRICE</h6></strong></label>
-                            <input type="number" class="form-control fs_14px-s form-control-lg price-t rounded" value="$ 10" id="price-d" placeholder="price">
+                            <input type="number" class="form-control fs_14px-s form-control-lg price-t rounded" value="$ 10" id="price-d" placeholder="$ price">
                         </div>
                     </div>
                 </div>
@@ -102,37 +102,37 @@
 
                 <div class="row px-xl-5 px-3">
                     <div class="col-lg-4 col-12 pt-4">
-                        <h6><strong>Gender</strong></h6>
+                        <h6><strong>GENDER</strong></h6>
                         <div class="form-check">
                             <label class="form-check-label fs_18px-s">
                             <input class="form-check-input radio-inline  mt-2 mr-3" type="radio" name="gender" id="male-d" value="male" checked>
-                                <span class="pl-3 fs_14px-s">Male</span>
+                                <span class="pl-3 fs_14px-s"><strong>Male</strong></span>
                             </label>
                             <label class="form-check-label fs_18px-s ml-5">
                             <input class="form-check-input radio-inline  mt-2 mr-3" type="radio" name="gender" id="female-d" value="female">
-                                <span class="pl-3 fs_14px-s"> Female</span>
+                                <span class="pl-3 fs_14px-s"><strong>Female</strong></span>
                             </label>
                         </div>
                     </div>
 
                     <div class="col-lg-8 col-12 pt-4">
-                        <h6><strong>Position</strong></h6>
-                        <div class="form-check">
-                            <label class="form-check-label fs_18px-s">
+                        <h6><strong>POSITION</strong></h6>
+                        <div class="form-check ">
+                            <label class="form-check-label d-md-inline-block d-block fs_18px-s">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="goalkeeper-d" value="goalkeeper" checked>
-                                <span class="pl-3 fs_14px-s">Goalkeeper</span>
+                                <span class="pl-md-3 pl-1 fs_14px-s"><strong>Goalkeeper</strong></span>
                             </label>
-                            <label class="form-check-label fs_18px-s ml-5">
+                            <label class="form-check-label d-md-inline-block d-block fs_18px-s ml-md-5 ">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="defender-d" value="defender">
-                                <span class="pl-3 fs_14px-s">Defernder</span>
+                                <span class="pl-md-3 pl-1 fs_14px-s"><strong>Defender</strong></span>
                             </label>
-                            <label class="form-check-label fs_18px-s ml-5">
+                            <label class="form-check-label d-md-inline-block d-block fs_18px-s ml-md-5 ">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="midfielder-d" value="midfielder" checked>
-                                <span class="pl-3 fs_14px-s">Midfielder</span>
+                                <span class="pl-md-3 pl-1 fs_14px-s"><strong>Midfielder</strong></span>
                             </label>
-                            <label class="form-check-label fs_18px-s ml-5">
+                            <label class="form-check-label d-md-inline-block d-block fs_18px-s ml-md-5 ">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="forward-d" value="forward">
-                                <span class="pl-3 fs_14px-s">Forward</span>
+                                <span class="pl-md-3 pl-1 fs_14px-s"><strong>Forward</strong></span>
                             </label>
                         </div>
                     </div>
