--- a/game_invitation.html
+++ b/game_invitation.html
@@ -424,7 +424,7 @@
             <div class="modal-content br_10px-s border-0">
                 <div class="container-fluid">
                     <!--header image-->
-                    <div class="row modal-header border-0 mt-5">
+                    <div class="row modal-header border-0 mt-4">
                         <div class="col-12 text-center">
                             <img src="assets/images/invitation.svg" width="130" alt="send invitation">
                         </div>
@@ -450,7 +450,7 @@
                                     </div>
                                     <div class="ml-2 text-left">
                                         <h6 class="fg_green-s mb-0">Thamer</h6>
-                                        <a href="javascript:void(0)" class="opacity_4-s text-dark">@thamedmd</a>
+                                        <a href="javascript:void(0)" class="opacity_4-s fs_12px-s text-dark">@thamedmd</a>
                                         <div class="">
                                             <img class="star_img-s" src="assets/images/yellow_star.svg" alt="star img">
                                             <img class="star_img-s" src="assets/images/yellow_star.svg" alt="star img">
@@ -463,7 +463,7 @@
                                 </div>
                                 <div class="text-right align-self-center">
                                     <h6 class=""><strong>Goalkeeper</strong></h6>
-                                    <span class="opacity_4-s">Position</span>
+                                    <span class="opacity_4-s"><strong>Position</strong></span>
                                 </div>
                             </div>
                         </div>
@@ -472,7 +472,7 @@
                         <!--amount pay-->
                         <div class="col-12 mt-4">
                             <div class="d-flex justify-content-between">
-                                <div class="opacity_4-s">Amount to pay</div>
+                                <div class="opacity_4-s"><strong>Amount to pay</strong></div>
                                 <div>
                                     <img src="" alt="">
                                     <span><strong>$12.5</strong></span>
@@ -543,7 +543,7 @@
             <div class="modal-content br_10px-s border-0">
                 <div class="container-fluid">
                     <!--header image-->
-                    <div class="row modal-header border-0 mt-5">
+                    <div class="row modal-header border-0 mt-4">
                         <div class="col-12 text-center">
                             <img src="assets/images/invitation.svg" width="130" alt="send invitation">
                         </div>
@@ -554,7 +554,7 @@
                         <!--modal text-->
                         <div class="col-12 text-center">
                             <h4 class="fg_green-s">CANCEL INVITATION</h4>
-                            <h6 class="mb-3"><strong>Are you sure you want to cancel this invitation?</strong></h6>
+                            <h6 class="mb-3"><strong>Are you sure you want to cancel invitation?</strong></h6>
                             <p class="opacity_4-s">Once you cancel this invitation, you can not revert this action.</p>
                         </div>
                         <!--modal text end-->
@@ -569,7 +569,7 @@
                                     </div>
                                     <div class="ml-2 text-left">
                                         <h6 class="fg_green-s mb-0">Thamer</h6>
-                                        <span class="opacity_4-s">@thamedmd</span>
+                                        <span class="opacity_4-s fs_12px-s">@thamedmd</span>
                                         <div class="">
                                             <img class="star_img-s" src="assets/images/yellow_star.svg" alt="star img">
                                             <img class="star_img-s" src="assets/images/yellow_star.svg" alt="star img">
@@ -582,7 +582,7 @@
                                 </div>
                                 <div class="text-right align-self-center">
                                     <h6 class=""><strong>Goalkeeper</strong></h6>
-                                    <span class="opacity_4-s">Position</span>
+                                    <span class="opacity_4-s"><strong>Position</strong></span>
                                 </div>
                             </div>
                         </div>
@@ -591,7 +591,7 @@
                         <!--amount pay-->
                         <div class="col-12 mt-4">
                             <div class="d-flex justify-content-between">
-                                <div class="opacity_4-s">Amount to pay</div>
+                                <div class="opacity_4-s"><strong>Amount to pay</strong></div>
                                 <div>
                                     <img src="" alt="">
                                     <span><strong>$12.5</strong></span>
@@ -632,7 +632,7 @@
     <script src="assets/js/calendar.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/js/main.js"></script> -->
     <script type="text/javascript">
         var config = `
         function selectDate(date) {
