--- a/more.html
+++ b/more.html
@@ -128,7 +128,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_password_modal-d">
                         <div class="align-self-center">
-                            <h6 class="mb-0"><strong>Update Pasword</strong></h6>
+                            <h6 class="mb-0"><strong>Update Password</strong></h6>
                         </div>
                         <div class="align-self-center">
                             <img src="assets/images/arrow_black.svg" alt="">
@@ -158,7 +158,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
                         <div class="align-self-center">
-                            <h6 class="mb-0"><strong>Notification</strong></h6>
+                            <h6 class="mb-0"><strong>APP Notification</strong></h6>
                         </div>
                         <div class="align-self-center">
                             <label class="switch mb-0">
@@ -181,7 +181,7 @@
                     <a class="td_none-s" href="term_and_condition.html">
                         <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
                             <div class="align-self-center">
-                                <h6 class="mb-0"><strong>Term And Conditions</strong></h6>
+                                <h6 class="mb-0"><strong>Terms & Conditions</strong></h6>
                             </div>
                             <div class="align-self-center">
                                 <img src="assets/images/arrow_black.svg" alt="">
@@ -193,7 +193,7 @@
                     <a class="td_none-s" href="help.html">
                         <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
                             <div class="align-self-center">
-                                <h6 class="mb-0"><strong>help</strong></h6>
+                                <h6 class="mb-0"><strong>Help</strong></h6>
                             </div>
                             <div class="align-self-center">
                                 <img src="assets/images/arrow_black.svg" alt="">
