--- a/filter_by_rating.html
+++ b/filter_by_rating.html
@@ -21,11 +21,16 @@
         <div class="modal-dialog modal-dialog-centered ">
             <div class="modal-content br_10px-s border-0">
                 <div class="modal-header bg_grey-s bg_filter_img-s border-0 br_up_left_right_10px-s">
-                    <h5 class="modal-title text-dark" id="view-head"><strong>Filter By Rating</strong></h5>
+                    <h5 class="modal-title text-dark" id="view-head"><strong>FILTER BY RATING</strong></h5>
                 </div>
                 <div class="modal-body">
+                    <div class="row py-3">
+                        <div class="col-12">
+                            <h6 class="opacity_4-s">RATING</h6>
+                        </div>
+                    </div>
                     <form action="">
-                        <div class="row py-5">
+                        <div class="row pt-3 pb-5">
                             <div class="col-12">
                                 <div class="price-field ">
                                     <input type="range"  min="100" max="500" value="100" name="foo" id="lower">
@@ -34,7 +39,7 @@
                             </div>
                         </div>
                     </form>
-                    <div class="row">
+                    <div class="row pt-5">
                         <div class="col-12 d-flex justify-content-center">
                             <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-md-2 w_h_48_x_63px-s"><strong>CANCEL</strong></button>
                             <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white px-5 ml-2 w_h_48_x_63px-s"><strong>APPLY</strong></button>
