--- a/rating_player.html
+++ b/rating_player.html
@@ -49,10 +49,10 @@
                         <h4 class="fg_green-s">Jamele</h4>
                         <div class="d-flex mb-2">
                             <div>
-                                <a href="javascript:void(0)" class="text-dark"><strong>@jamelemd</strong></a>
+                                <a href="javascript:void(0)" class="text-dark td_none-s"><strong>@jamelemd</strong></a>
                             </div>
                             <div class="pl-3">
-                                <a class="pr-2">
+                                <a href="javascript:void(0)" class="pr-2 td_none-s">
                                     <img src="assets/images/Location.svg" width="10" class="img-fluid mb-1" alt="Location" />
                                     <span class="text-dark"> <strong>Adailiya </strong></span>
                                 </a>
@@ -223,7 +223,7 @@
                         <!--modal text-->
                         <div class="col-12 ">
                             <h4 class="fg_green-s">Jamele</h4>
-                            <a href="javascript:void(0)">
+                            <a href="javascript:void(0)" class="td_none-s">
                                 <h5 class="opacity_4-s text-dark"><strong>@jamelemd</strong></h5>
                             </a>
                         </div>
