--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -27,7 +27,7 @@
                     <h4 class="pr-2 text-dark">More</h4>
                 </a>
                 <h4 class="px-2"><strong>/</strong></h4>
-                <h4 class="fg_green-s pl-2">Term & Conditions</h4>
+                <h4 class="fg_green-s pl-2">Terms & Conditions</h4>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
                 <div class="">
