--- a/more.html
+++ b/more.html
@@ -247,7 +247,7 @@
                             <form action="">
                                 <div class="form-group pt-3">
                                     <label for="number-d" class=""><strong>PHONE NUMBER</strong></label>
-                                    <input type="number" name="number" placeholder="Enter your phone number" id="number-d" class="form-control rounded form-control-xl py-4 number-t">
+                                    <input type="tel" name="number" placeholder="Enter your phone number" id="number-d" class="form-control rounded form-control-xl py-4 number-t">
                                 </div>
                                 <div class="form-group pt-3">
                                     <label for="current_password-d" class=""><strong>PASSWORD</strong></label>
@@ -365,7 +365,7 @@
                             <form action="">
                                 <div class="form-group pt-3">
                                     <label for="new_number-d" class=""><strong>NEW PHONE NUMBER</strong></label>
-                                    <input type="number" name="number" placeholder="Enter your phone number" id="new_number-d" class="form-control rounded form-control-xl py-4 new_number-t">
+                                    <input type="tel" name="number" placeholder="Enter your phone number" id="new_number-d" class="form-control rounded form-control-xl py-4 new_number-t">
                                 </div>
                                 <div class="form-group pt-3">
                                     <label for="password-d" class=""><strong>PASSWORD</strong></label>
@@ -409,7 +409,7 @@
                     <div class="row modal-body justify-content-center pt-2 pb-0">
                         <div class="col-12">
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">SUCCESS!</h4>
+                                <h4 class="fg_green-s">VERIFIED!</h4>
                                 <h5>Your phone number has been updated successfully</h5>
                             </div>
                         </div>
@@ -622,7 +622,7 @@
                     <div class="row modal-body justify-content-center pt-2 pb-0">
                         <div class="col-12">
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">SUCCESS!</h4>
+                                <h4 class="fg_green-s">VERIFIED!</h4>
                                 <h5>Your email has been updated successfully</h5>
                             </div>
                         </div>
@@ -833,7 +833,7 @@
                     <div class="row modal-body justify-content-center pt-2 pb-0">
                         <div class="col-12">
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">SUCCESS!</h4>
+                                <h4 class="fg_green-s">VERIFIED!</h4>
                                 <h5>Your password has been updated successfully</h5>
                             </div>
                         </div>
@@ -841,11 +841,11 @@
 
                     <div class="row pt-4 pb-4 px-2">
                         <!--OK button-->
-                        <a href="more.html">
-                            <div class="col-12 ">
+                        <div class="col-12 ">
+                            <a href="more.html">
                                 <button type="button" class="btn bg_green-s br_10px-s py-3 text-white w-100"><strong>OK</strong></button>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                         <!--OK button end-->
                     </div>
                 </div>
